src/cli/generator/snapshots/tailcall__cli__generator__generator__test__generator_spec__src__cli__generator__tests__fixtures__generator__json_proto_mix_config.json.snap
---
source: src/cli/generator/generator.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://jsonplaceholder.typicode.com") {
  query: Query
}

input Id @tag(id: "news.NewsId") {
  id: Int
}

input news__MultipleNewsId @tag(id: "news.MultipleNewsId") {
  ids: [Id]
}

input news__NewsInput @tag(id: "news.News") {
  body: String
  id: Int
  postImage: String
  status: news__Status
  title: String
}

enum news__Status {
  DELETED
  DRAFT
  PUBLISHED
}

type Address {
  city: String
  geo: Geo
  street: String
  suite: String
  zipcode: String
}

type Company {
  bs: String
  catchPhrase: String
  name: String
}

type Geo {
  lat: String
  lng: String
}

type News @tag(id: "news.News") {
  body: String
  id: Int
  postImage: String
  status: news__Status
  title: String
}

type Query {
  news__NewsService__AddNews(news: news__NewsInput!): News! @grpc(body: "{{.args.news}}", method: "news.NewsService.AddNews")
  news__NewsService__DeleteNews(newsId: news__NewsId!): Empty! @grpc(body: "{{.args.newsId}}", method: "news.NewsService.DeleteNews")
  news__NewsService__EditNews(news: news__NewsInput!): News! @grpc(body: "{{.args.news}}", method: "news.NewsService.EditNews")
  news__NewsService__GetAllNews: news__NewsList! @grpc(method: "news.NewsService.GetAllNews")
  news__NewsService__GetMultipleNews(multipleNewsId: news__MultipleNewsId!): news__NewsList! @grpc(body: "{{.args.multipleNewsId}}", method: "news.NewsService.GetMultipleNews")
  news__NewsService__GetNews(newsId: news__NewsId!): News! @grpc(body: "{{.args.newsId}}", method: "news.NewsService.GetNews")
  users: [User] @http(path: "/users")
}

type User {
  address: Address
  company: Company
  email: String
  id: Int
  name: String
  phone: String
  username: String
  website: String
}

type news__NewsList @tag(id: "news.NewsList") {
  news: [News]
}
